# tech_sup

./: CMakeLists.txt  Makefile
File_txt_Function/: File_request_function.c  File_request_function.h  main.c
client/: client.c  client.h  client_main.c
server/: server.c  server.h  server_main.c
